Closed
Bug 448506
Opened 17 years ago
Closed 17 years ago
xlink:show="new" does not work in SVG
Categories
(Core :: SVG, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: A.Mueller, Assigned: longsonr)
References
()
Details
Attachments
(1 file, 2 obsolete files)
|
968 bytes,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 6.0; de; rv:1.9.0.1) Gecko/2008070208 Firefox/3.0.1
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 6.0; de; rv:1.9.0.1) Gecko/2008070208 Firefox/3.0.1
we have the following code segment in a SVG which is included into a html with <embed>
<text x="0" y="46" class="normal2">expltext <a xlink:href="http://www.nowhere.de" xlink:show="new" focusHighlight="none">text</a></text>
but xlink:show="new" is ignored by FF
Reproducible: Always
Steps to Reproduce:
start URL
click on uismedia
Actual Results:
the URL will be shown inside the embed
Expected Results:
the URL should be shown as a new window. This works fine with Opera, Safari and IE
| Assignee | ||
Comment 1•17 years ago
|
||
You should really be using target rather than xlink:show. xlink:show is or will be deprecated (http://www.w3.org/TR/SVGMobile12/linking.html#xlinkRefAttrs) and is only relevant when there is no target attribute.
Assignee: nobody → longsonr
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #331726 -
Flags: review?(jwatt)
| Assignee | ||
Updated•17 years ago
|
Assignee: longsonr → nobody
Status: ASSIGNED → NEW
Component: General → SVG
Product: Firefox → Core
QA Contact: general → general
| Assignee | ||
Updated•17 years ago
|
Assignee: nobody → longsonr
| Assignee | ||
Comment 2•17 years ago
|
||
On second thoughts it makes sense that xlink:show="replace" skip GetBaseTarget.
Attachment #331726 -
Attachment is obsolete: true
Attachment #331728 -
Flags: review?(jwatt)
Attachment #331726 -
Flags: review?(jwatt)
| Reporter | ||
Comment 3•17 years ago
|
||
(In reply to comment #1)
> You should really be using target rather than xlink:show. xlink:show is or will
> be deprecated (http://www.w3.org/TR/SVGMobile12/linking.html#xlinkRefAttrs) and
> is only relevant when there is no target attribute.
>
Unfortunately Adobe SVGViewer 3.x which is based on SVG 1.1 does not understand target="_blank"
| Assignee | ||
Comment 4•17 years ago
|
||
You could try using both attributes I suppose.
| Reporter | ||
Comment 5•17 years ago
|
||
(In reply to comment #4)
> You could try using both attributes I suppose.
>
I tried this but it doesnt work. It seems the target attribute has a higher priority in ASV too. Unfortunately only target="_top" works with ASV and this attribute replace the window in FF but do not open a new one.
Updated•17 years ago
|
Attachment #331728 -
Flags: review?(jwatt) → review+
| Assignee | ||
Updated•17 years ago
|
Attachment #331728 -
Flags: superreview?(roc)
Comment on attachment 331728 [details] [diff] [review]
updated patch
+ aTarget.AssignLiteral("_blank");
+ case 1:
Add a comment to make it clear you fall through to the return. Actually, better to just add a 'return'.
Attachment #331728 -
Flags: superreview?(roc) → superreview+
| Assignee | ||
Comment 7•17 years ago
|
||
Attachment #331728 -
Attachment is obsolete: true
| Assignee | ||
Comment 8•17 years ago
|
||
checked in 3ec0cb079898
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•