Bug 448506 - support xlink:show attribute in links. r=jwatt,sr=roc